# bananavision-drone

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
configs/: banana_ensemble.yaml  banana_multifarm.yaml  banana_real_model.yaml  banana_uav.yaml  dataset.yaml
docs/: ARCHITECTURE.md  COMMERCIAL_READINESS.md  DATASET_GUIDE.md  DRONE_DEPLOYMENT.md  FAILURE_MODES.md  MODEL_CARD.md  MODEL_CARD_REAL.md  OPERATOR_MANUAL.md  REFERENCES.md  ROADMAP.md  TRAINING.md  VALIDATION_PROTOCOL.md
docs/evidence/: README.md
docs/evidencia/: README.md
edge/mavlink/: mission_counter.py
examples/: README.md  synthetic_banana_scene.truth.json
real_data/: README.md  calibrate_count.py  combine_real_datasets.py  eval_real.py  make_synth_dataset.py  prepare_real_dataset.py  tune_inference.py
reports/: traffic_log.jsonl
scripts/: download_public_references.ps1  jetson_setup.sh
tests/: test_active_learning.py  test_annotations.py  test_api.py  test_calibration.py  test_capture_coverage.py  test_cluster_benchmark.py  test_cluster_review.py  test_config.py  test_deploy.py  test_deployment_audit.py  test_deployment_smoke.py  test_domain.py  test_drone_ready.py  test_edge_scripts.py  test_evaluation_batch.py  test_evidence_manifest.py  test_flight_profile.py  test_geo.py  test_geo_accuracy.py  test_holdout.py  test_inventory.py  test_kml.py  test_metrics.py  test_mission.py  test_mission_audit.py  test_mission_process.py  test_mission_quality.py  test_mission_runner.py  test_model_card.py  test_pipeline.py  test_postprocess.py  test_prediction_quality.py  test_preprocess.py  test_publication.py  test_quality.py  test_readiness.py  test_registry.py  test_release_audit.py  test_release_package.py  test_reporting.py  (+11 more)
(+80 files in other folders)
